// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CampaignCard snapshots matches snapshot for active campaign (raised < goal) 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-900 rounded-2xl overflow-hidden border border-gray-800"
    style="opacity: 0; transform: translateY(24px);"
  >
    <div
      class="relative"
    >
      <div
        class="relative w-full h-48"
      >
        <img
          alt="Test Campaign - campaign header image"
          class="object-cover"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          sizes="(max-width: 768px) 100vw, 33vw"
          src="/_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=3840&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=256&q=75 256w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=384&q=75 384w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=3840&q=75 3840w"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </div>
    </div>
    <div
      class="p-5 space-y-3"
    >
      <h2
        class="text-lg font-semibold"
      >
        Test Campaign
      </h2>
      <p
        class="text-gray-400 text-sm line-clamp-2"
      >
        A test description
      </p>
      <div
        class="flex items-center gap-3"
      >
        <div
          class="flex-1 relative"
        >
          <div
            aria-label="Funding progress: 50%"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="50"
            class="w-full bg-gray-800 rounded-full h-2 relative overflow-hidden"
            role="progressbar"
          >
            <div
              class="h-2 rounded-full transition-all duration-500 bg-indigo-500"
              style="width: 50%;"
            />
            <div
              class="absolute right-0 top-0 h-full w-0.5 bg-gray-600 opacity-50"
            />
          </div>
        </div>
        <span
          aria-hidden="true"
          class="text-sm font-medium min-w-[3rem] text-right text-indigo-400"
        >
          50%
        </span>
      </div>
      <div
        class="flex justify-between text-sm text-gray-400"
      >
        <span>
          500 XLM raised
        </span>
        <span>
          1,000 XLM goal
        </span>
      </div>
      <div
        data-testid="countdown"
      >
        2099-01-01T00:00:00.000Z
      </div>
      <button
        aria-label="Pledge to Test Campaign"
        class="w-full py-2 rounded-xl font-medium bg-indigo-600 hover:bg-indigo-500 disabled:opacity-50 disabled:cursor-not-allowed transition"
      >
        Pledge Now
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CampaignCard snapshots matches snapshot for funded campaign (raised >= goal) 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-900 rounded-2xl overflow-hidden border border-gray-800"
    style="opacity: 0; transform: translateY(24px);"
  >
    <div
      class="relative"
    >
      <div
        class="relative w-full h-48"
      >
        <img
          alt="Test Campaign - campaign header image"
          class="object-cover"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          sizes="(max-width: 768px) 100vw, 33vw"
          src="/_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=3840&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=256&q=75 256w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=384&q=75 384w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fexample.com%2Fimage.jpg&w=3840&q=75 3840w"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </div>
      <span
        class="absolute top-3 left-3 px-2 py-0.5 rounded-full text-xs font-semibold bg-green-500/90 text-white"
      >
        Funded
      </span>
    </div>
    <div
      class="p-5 space-y-3"
    >
      <h2
        class="text-lg font-semibold"
      >
        Test Campaign
      </h2>
      <p
        class="text-gray-400 text-sm line-clamp-2"
      >
        A test description
      </p>
      <div
        class="flex items-center gap-3"
      >
        <div
          class="flex-1 relative"
        >
          <div
            aria-label="Funding progress: 100%"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="100"
            class="w-full bg-gray-800 rounded-full h-2 relative overflow-hidden"
            role="progressbar"
          >
            <div
              class="h-2 rounded-full transition-all duration-500 bg-green-500"
              style="width: 100%;"
            />
            <div
              class="absolute right-0 top-0 h-full w-0.5 bg-gray-600 opacity-50"
            />
          </div>
        </div>
        <span
          aria-hidden="true"
          class="text-sm font-medium min-w-[3rem] text-right text-green-400"
        >
          100%
        </span>
      </div>
      <div
        class="flex justify-between text-sm text-gray-400"
      >
        <span>
          1,000 XLM raised
        </span>
        <span>
          1,000 XLM goal
        </span>
      </div>
      <div
        data-testid="countdown"
      >
        2099-01-01T00:00:00.000Z
      </div>
      <button
        aria-label="Test Campaign — successfully funded"
        class="w-full py-2 rounded-xl font-medium bg-indigo-600 hover:bg-indigo-500 disabled:opacity-50 disabled:cursor-not-allowed transition"
        disabled=""
      >
        Successfully Funded
      </button>
    </div>
  </div>
</DocumentFragment>
`;
